--- a/html/products.html
+++ b/html/products.html
@@ -9,62 +9,65 @@
   <title>Products</title>
 </head>
 
-<div id="navbar">
-  <a href="index.html">
-    <img class="logo" src="../images/logosmall.png" /></a>
-  <a href="index.html">Home</a>
-  <a class="active" href="products.html"> Products</a>
-  <a href="booking.html">Booking</a>
-  <a href="location.html">Our Location</a>
-</div>
-<br />
+
 
 <body>
-  <div class="grid-cont">
-    <div class="img-cont">
-      <img src="../images/nail1.png" alt="Mnt Rainier" />
-    </div>
-    <div class="img-cont">
-      <img src="../images/nail2.png" alt="PNW Road" />
-    </div>
-    <div class="img-cont">
-      <img src="../images/nail3.png" alt="PNW Beach" />
-    </div>
-    <div class="img-cont">
-      <img src="../images/nail4.png" alt="Train Bridge" />
-    </div>
-    <div class="img-cont">
-      <img src="../images/nail5.png" alt="Seattle Skyline" />
-    </div>
-    <div class="img-cont">
-      <img src="../images/nail6.png" alt="PNW Beach and Forest" />
-    </div>
-    <div class="img-cont">
-      <img src="../images/nail7.png" alt="Rainier Washington" />
-    </div>
-    <div class="img-cont">
-      <img src="../images/nail8.png" alt="Rock Beach PNW" />
-    </div>
-    <div class="img-cont">
-      <img src="../images/nail9.png" alt="Tiger Mountain Forest" />
-    </div>
-    <div class="img-cont">
-      <img src="../images/nail10.png" alt="Mount Hood/Portland" />
-    </div>
-    <div class="img-cont">
-      <img src="../images/nail11.png" alt="Oregon Winter" />
-    </div>
-    <div class="img-cont">
-      <img src="../images/nail12.png" alt="Oregon Forest" />
-    </div>
-    <div class="img-cont">
-      <img src="../images/nail13.png" alt="Oregon Forest" />
-    </div>
-    <div class="img-cont">
-      <img src="../images/nail14.png" alt="Oregon Forest" />
-    </div>
-    <div class="img-cont">
-      <img src="../images/nail15.png" alt="Oregon Forest" />
+  <div id="navbar">
+    <a href="index.html">
+      <img class="logo" src="../images/logosmall.png" /></a>
+    <a href="index.html">Home</a>
+    <a class="active" href="products.html"> Products</a>
+    <a href="booking.html">Booking</a>
+    <a href="location.html">Our Location</a>
+  </div>
+  <br />
+  <div class="content">
+    <div class="grid-cont">
+      <div class="img-cont">
+        <img src="../images/nail1.png" alt="Mnt Rainier" />
+      </div>
+      <div class="img-cont">
+        <img src="../images/nail2.png" alt="PNW Road" />
+      </div>
+      <div class="img-cont">
+        <img src="../images/nail3.png" alt="PNW Beach" />
+      </div>
+      <div class="img-cont">
+        <img src="../images/nail4.png" alt="Train Bridge" />
+      </div>
+      <div class="img-cont">
+        <img src="../images/nail5.png" alt="Seattle Skyline" />
+      </div>
+      <div class="img-cont">
+        <img src="../images/nail6.png" alt="PNW Beach and Forest" />
+      </div>
+      <div class="img-cont">
+        <img src="../images/nail7.png" alt="Rainier Washington" />
+      </div>
+      <div class="img-cont">
+        <img src="../images/nail8.png" alt="Rock Beach PNW" />
+      </div>
+      <div class="img-cont">
+        <img src="../images/nail9.png" alt="Tiger Mountain Forest" />
+      </div>
+      <div class="img-cont">
+        <img src="../images/nail10.png" alt="Mount Hood/Portland" />
+      </div>
+      <div class="img-cont">
+        <img src="../images/nail11.png" alt="Oregon Winter" />
+      </div>
+      <div class="img-cont">
+        <img src="../images/nail12.png" alt="Oregon Forest" />
+      </div>
+      <div class="img-cont">
+        <img src="../images/nail13.png" alt="Oregon Forest" />
+      </div>
+      <div class="img-cont">
+        <img src="../images/nail14.png" alt="Oregon Forest" />
+      </div>
+      <div class="img-cont">
+        <img src="../images/nail15.png" alt="Oregon Forest" />
+      </div>
     </div>
   </div>
 </body>
