--- a/html/booking.html
+++ b/html/booking.html
@@ -11,7 +11,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 
-  <!-- Boostrap -->
+  <!-- *Boostrap* -->
 
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -36,9 +36,14 @@
   <link rel="stylesheet" href="../styles/style.css" />
 
   <title>Booking Page </title>
+
+
 </head>
 
 <body class="bookingBody">
+
+
+  <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="./index.html"><img class="logo" src="../images/logosmall.png" /></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -62,7 +67,12 @@
       </ul>
     </div>
   </nav>
+  <!-- End of Navigation -->
 
+
+
+
+  <!-- Booking Content -->
   <div class="content">
     <div class="booking-heading">
       <h2>Book an Appointment!</h2>
@@ -82,6 +92,7 @@
         <h4 class="heading-phone">Call Us: (123) 456 - 7890</h4>
       </div>
 
+      <!-- Reservation Heading -->
       <div class="container-form col-lg-6">
         <form action="#">
           <h2 class="heading-form">
@@ -168,6 +179,10 @@
       </div>
     </div>
   </div>
+
+
+
+
 
   <!-- Footer -->
   <footer class="text-center text-lg-start bg-light text-muted text-black">
@@ -257,6 +272,10 @@
   </footer>
   <!-- Footer -->
 
+
+
+
+
   <!-- Appointment Picker Scripts -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/classlist/1.2.20171210/classList.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"
@@ -268,6 +287,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
   <script
     src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
+
+
 
   <!-- My JS file -->
   <script src="../javascripts/app.js"></script>
