--- a/html/location.html
+++ b/html/location.html
@@ -10,8 +10,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
-    <!-- Boostrap -->
 
+
+    <!-- Boostrap -->
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" />
@@ -31,6 +32,7 @@
 </head>
 
 <body>
+    <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="./index.html"><img class="logo" src="../images/logosmall.png" /></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -54,15 +56,19 @@
             </ul>
         </div>
     </nav>
+    <!-- End of Navigation -->
 
 
 
-
+    <!-- Our Location -->
     <div class="content">
         <h1 class="mapTitle">Find Us in Charlotte!</h1>
 
         <div id="map"></div>
     </div>
+    <!-- End of Our Location -->
+
+
 
     <!-- Footer -->
     <footer class="text-center text-lg-start bg-light text-muted text-black">
@@ -151,6 +157,8 @@
         <!-- Copyright -->
     </footer>
     <!-- Footer -->
+
+
 
 
     <script async
