Finsihed home page as well as hover for products

--- a/html/index.html
+++ b/html/index.html
@@ -61,28 +61,64 @@
 
 
 
-
-
+<!-- Background images -->
   <div class="title"></div>
 
   <div class="bg-image2 img2"></div>
   <div class="bg-image1 img1"></div>
+  <div class="bg-image3 img3"></div>
 
-  <div class="player-text">
-    <h6>LINDSEY'S NAILS</h6>
+
+<!-- First image text -->
+<div class="top-text">
+    <h1>LINDSEY'S NAILS</h1>
+  </div>
+  <div class="bottom-text">
+    <P>We offer luxury nails and have over 300 polish choices from reputable<BR>
+      brands such as OPI and Essie. Our advanced nail technicians are highly<BR>
+        trained in services such as manicures, pedicures, gel nails, acrylics<BR>
+          and special paints such as holographic, chrome, and glow nails.   </P>
+          <br>
+          <P>Come into one of our many locations to enjoy a relaxing<BR>
+            pedicure while your nails are painted to your prefference <BR>
+              by one of our trained professionals. Take a look at our gallary for <BR>
+                inspiration on how you would like your nails for your next visit.   </P>
+                <br>
+                <P>Down below is a list of all our services as well as some reviews by <BR>
+                  our happy customers. If you would like to come in to one of our locations<BR>
+                    please head on to our locations page to see whats closest to you<BR>
+                      and after that you can continue to our booking tab to make your appointment.   </P>
   </div>
 
-  <div class="computer-text">
-    <h6>
-      We offer luxury nails and have over 300 polish choices from reputable
-      brands such as OPI and Essie. Our advanced nail technicians are highly
-      trained in services such as manicures, pedicures, gel nails, acrylics
-      and special paints such as holographic, chrome, and glow nails.
-    </h6>
+<!-- Seconds image text -->
+  <div class="top-text1">
+    <h4>OUR SERVICES:</h4>
+  </div>
+  <div class="bottom-text1">
+    <ul>
+      <li>Basic Manicure: A basic or standard manicure is the traditional manicure that you're probably familiar with. Here your nails are trimmed, shaped and buffed. Cuticle oil is applied and cuticles are managed too. You'll usually get to enjoy a wonderfully relaxing hand massage. At the end, standard nail polish is applied.</li>
+      <br><li>French Manicure: a manicure in which a band of usually white polish across the tip of the nail contrasts with the often clear or pale polish below</li>
+      <br><li>Press-On Manicure : Press on nails, also known as glue on nails, were super popular in the late 90's/early 00's. They are artificial, acrylic nails that are already made up; the client simply has to glue them onto the top of their natural nail.</li>
+    </ul>
   </div>
 
-
-
+  <!-- Third image text -->
+  <div class="top-text3">
+    <h1>REVIEWS</h1>
+  </div>
+  <div class="bottom-text3">
+    <P>[Cammy: I love visiting Lindsey! She always does an amzing<BR>
+       job and is always so happy to see familiar faces.] 4.5 Stars  </P>
+          <br>
+          <P>[Macy: This place is amazing. I came here right before my sons wedding <BR>
+            I was in a rush to get my nails done and everyone was busy or had <BR>
+              no form of booking an appointment online. Lindsey was able to have
+              <BR> me in the same day and she treated me so well!] 5 Stars  </P>
+                <br>
+                <P>[Nancy: What a hard working crew did I encounter<BR>
+                  I walked in and immidiately was attended. They asked for my phone number and told me they 
+                   <BR> would call when they were ready. A few minutes later I was sitting down and happy with the progress being made. I will definitely be coming back] 4.5 Stars  </P>
+  </div>
 
 
 
