--- a/html/products.html
+++ b/html/products.html
@@ -65,49 +65,64 @@
   <div class="content">
     <div class="grid-cont">
       <div class="img-cont">
-        <img src="../images/nail1.png" alt="Mnt Rainier" />
+        <img src="../images/nail1.png" />
+        <div class="hovercap" >Attic White </div>
       </div>
       <div class="img-cont">
-        <img src="../images/nail2.png" alt="PNW Road" />
+        <img src="../images/nail2.png"  />
+        <div class="hovercap" >Perky Pink</div>
       </div>
       <div class="img-cont">
-        <img src="../images/nail3.png" alt="PNW Beach" />
+        <img src="../images/nail3.png" />
+        <div class="hovercap" >Light Pink</div>
       </div>
       <div class="img-cont">
-        <img src="../images/nail4.png" alt="Train Bridge" />
+        <img src="../images/nail4.png"  />
+        <div class="hovercap" >Bright Pink </div>
       </div>
       <div class="img-cont">
-        <img src="../images/nail5.png" alt="Seattle Skyline" />
+        <img src="../images/nail5.png"  />
+        <div class="hovercap" >Glossy White </div>
       </div>
       <div class="img-cont">
-        <img src="../images/nail6.png" alt="PNW Beach and Forest" />
+        <img src="../images/nail6.png" />
+        <div class="hovercap" >Pearly Purple </div>
       </div>
       <div class="img-cont">
-        <img src="../images/nail7.png" alt="Rainier Washington" />
+        <img src="../images/nail7.png" />
+        <div class="hovercap" >Lime Green </div>
       </div>
       <div class="img-cont">
-        <img src="../images/nail8.png" alt="Rock Beach PNW" />
+        <img src="../images/nail8.png" />
+        <div class="hovercap" >Hot Red </div>
       </div>
       <div class="img-cont">
-        <img src="../images/nail9.png" alt="Tiger Mountain Forest" />
+        <img src="../images/nail9.png"  />
+        <div class="hovercap" >Hot Pink </div>
       </div>
       <div class="img-cont">
-        <img src="../images/nail10.png" alt="Mount Hood/Portland" />
+        <img src="../images/nail10.png"  />
+        <div class="hovercap" >Bright Purple </div>
       </div>
       <div class="img-cont">
-        <img src="../images/nail11.png" alt="Oregon Winter" />
+        <img src="../images/nail11.png" />
+        <div class="hovercap" >Love Red </div>
       </div>
       <div class="img-cont">
-        <img src="../images/nail12.png" alt="Oregon Forest" />
+        <img src="../images/nail12.png"  />
+        <div class="hovercap" >Sea Green </div>
       </div>
       <div class="img-cont">
-        <img src="../images/nail13.png" alt="Oregon Forest" />
+        <img src="../images/nail13.png" />
+        <div class="hovercap" >Dark Blue </div>
       </div>
       <div class="img-cont">
-        <img src="../images/nail14.png" alt="Oregon Forest" />
+        <img src="../images/nail14.png" />
+        <div class="hovercap" >Dark Purple </div>
       </div>
       <div class="img-cont">
-        <img src="../images/nail15.png" alt="Oregon Forest" />
+        <img src="../images/nail15.png"  />
+        <div class="hovercap" >Dark Green </div>
       </div>
     </div>
   </div>
